@@ -141,6 +141,8 @@ def OSConfiguration(index):
     config[51] = __settings__.getSetting("id-psp")   
     config[55] = __settings__.getSetting("id-delete")   
     config[56] = __settings__.getSetting("id-eject")   
+    config[57] = __settings__.getSetting("id-file-source")
+
 
     # Modul-global variable to detect if debug-log is active
 
@@ -305,6 +307,7 @@ def OSConfiguration(index):
     config[52] = os.getenv("HOME") + '/.xbmc/userdata/addon_data/script.video.swiss.army.knife/media/DVD-CRC'
     config[53] = os.getenv("HOME") + '/.xbmc/userdata/addon_data/script.video.swiss.army.knife/PWATCH'
     config[54] = os.getenv("HOME") + '/.xbmc/userdata/addon_data/script.video.swiss.army.knife/TERM_ALL'
+   
 
     # With a list the delete of multiple files is very easy ;-)
 
